# host-sink-app

./: CMakeLists.txt  README.md  app_cli.cpp  app_cli.h  app_common.c  app_common.h  app_init.c  app_process.c  cli_commands.cpp  cli_commands.h  main.cpp
config/: sl_sensor_sink_config.h
inc/: sl_connect_sdk_ota_bootloader_test_common.h
